Update and rename Untitled0 (3).ipynb to Finding_heavy_traffics_indicators.ipynb

--- a/Data_Science/Finding_heavy_traffics_indicators.ipynb
+++ b/Data_Science/Finding_heavy_traffics_indicators.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Guided Project: Finding Heavy Traffic Indicators on I-94\n",
+        "### Finding Heavy Traffic Indicators on I-94\n",
         "The goal of our analysis is to find indicators of heavy traffic on I-94. These indicators can be weather type, time of the day, time of the week, etc. We will use the dataset about westbound traffic on the I-94 Interstate highway."
       ],
       "metadata": {
